@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 
@@ -269,7 +270,7 @@ public class ExtendedOperationConfigManager implements
     {
       Class<? extends ExtendedOperationHandler> theClass =
           pd.loadClass(className, ExtendedOperationHandler.class);
-      ExtendedOperationHandler extendedOperationHandler = theClass.newInstance();
+      ExtendedOperationHandler extendedOperationHandler = theClass.getDeclaredConstructor().newInstance();
 
       extendedOperationHandler.initializeExtendedOperationHandler(config);
 
@@ -278,7 +279,8 @@ public class ExtendedOperationConfigManager implements
     catch (Exception e)
     {
       logger.traceException(e);
-      throw new ConfigException(ERR_CONFIG_EXTOP_INVALID_CLASS.get(className, config.dn(), e), e);
+      throw new ConfigException(ERR_CONFIG_EXTOP_INVALID_CLASS.get(className, config.dn(),
+          stackTraceToSingleLineString(e)), e);
     }
   }
 
@@ -294,14 +296,15 @@ public class ExtendedOperationConfigManager implements
     try {
       Class<? extends ExtendedOperationHandler> theClass =
           pd.loadClass(className, ExtendedOperationHandler.class);
-      ExtendedOperationHandler extOpHandler = theClass.newInstance();
+      ExtendedOperationHandler extOpHandler = theClass.getDeclaredConstructor().newInstance();
 
       return extOpHandler.isConfigurationAcceptable(config, unacceptableReasons);
     }
     catch (Exception e)
     {
       logger.traceException(e);
-      unacceptableReasons.add(ERR_CONFIG_EXTOP_INVALID_CLASS.get(className, config.dn(), e));
+      unacceptableReasons.add(ERR_CONFIG_EXTOP_INVALID_CLASS.get(className, config.dn(),
+          stackTraceToSingleLineString(e)));
       return false;
     }
   }
